[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.20.4"
tree-sitter-graph = "0.11.2"
tree-sitter-typescript = "0.20.4"
tree-sitter-rust = "0.20.4"
tree-sitter-traversal = "0.1.2"
postgres = "0.19.7"
tokio-postgres = "0.7.10"
apache_age = { version = "0.6.0", features = ["serializers"] }
serde = { version = "1.0.197", features = ["derive"] }
lazy_static = "1.4.0"
tokio = "1.36.0"
anyhow = "1.0.81"
convert_case = "0.6.0"

[build-dependencies]
cc = "*"
